feat: Modernize codebase with Java 21 features
- Replace fixed thread pool with virtual threads (Java 21 Project Loom) in EmbeddedServer for better scalability
- Convert multi-line SQL strings to text blocks in DatabaseManager for improved readability
- Fix maven-compiler-plugin source/target configuration to 21 (was conflicting with properties)